fixed rotation issue when stuck to wall or taken space, left and right movement need logic to handle fast dropping better

--- a/src/styles/MainGrid.scss
+++ b/src/styles/MainGrid.scss
@@ -27,4 +27,16 @@
   .purple {
     background-color: purple;
   }
+
+  .blue {
+    background-color: blue;
+  }
+
+  .red {
+    background-color: red;
+  }
+
+  .grey {
+    background-color: grey;
+  }
 }
